# cosmos-safety

./: .gitignore  .gitmodules  README.md  clip_video.py  cosmos_safety.py  infer.sh  parse.py  patch_server.sh  pi_infer.sh  prompt.txt  pyproject.toml  reason.py  reason_server.py  record.sh  setup.sh  teleop.sh
