[project]
name = "cosmos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "httpx>=0.27",
    "imageio>=2.31",
    "imageio-ffmpeg",
    "lerobot>=0.4",
    "numpy>=1.24",
    "pyarrow",
    "python-multipart>=0.0.22",
    "torch>=2.7.1",
    "transformers>=4.49.0",
    "uvicorn>=0.32",
]
