[project]
name = "cosmos"
version = "0.1.0"
description = "A Safety Layer for Autonomous Wet Labs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "compressed-tensors>=0.14.0",
    "fastapi>=0.115",
    "httpx>=0.27",
    "imageio>=2.31",
    "imageio-ffmpeg",
    "lerobot>=0.4",
    "numpy>=1.24",
    "pyarrow",
    "python-multipart>=0.0.22",
    "torch>=2.7.1",
    "transformers>=4.57.6",
    "uvicorn>=0.32",
]
